--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "watch": "conc \"tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch\"  \"nodemon index.js\" "
   },
   "author": "Dilraj Singh",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.2",
+    "concurrently": "^9.0.0",
+    "config": "^3.3.12",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-layouts": "^1.0.0",
     "module-alias": "^2.2.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10"
   },
   "_moduleAliases": {
     "@root": ".",
@@ -26,5 +37,9 @@
     "@models": "app/models",
     "@databases": "app/database",
     "@configs": "config"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10",
+    "tailwindcss": "^3.4.4"
   }
 }
