--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "module-alias": "^2.2.3",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.4"
   },
   "_moduleAliases": {
     "@root": ".",
