--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "config": "^3.3.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "module-alias": "^2.2.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4"
   },
   "_moduleAliases": {
