--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "sass": "^1.78.0"
   },
   "devDependencies": {
